--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Yash Sharma Portfolio",
+  "name": "Yash Sanjay Bhosale Portfolio",
   "short_name": "Yash Portfolio",
   "description": "Personal portfolio of Yash Sanjay Bhosale – Web Developer & Frontend Engineer",
   "start_url": "./index.html",
